--- a/SQL/NODE/package.json
+++ b/SQL/NODE/package.json
@@ -12,6 +12,7 @@
         "package.json": "^2.0.1",
         "request": "^2.88.2",
         "cors": "^2.8.5",
-        "bent": "^7.3.7"
+        "bent": "^7.3.7",
+        "mysql": "2.18.1"
     }
 }
